static/docs/user/1.0/_sources/cli/apptainer_pull.rst.txt
.. _apptainer_pull:

apptainer pull
--------------

Pull an image from a URI

Synopsis
~~~~~~~~



  The 'pull' command allows you to download or build a container from a given
  URI. Supported URIs include:

  library: Pull an image from the currently configured library
      library://user/collection/container[:tag]

  docker: Pull a Docker/OCI image from Docker Hub, or another OCI registry.
      docker://user/image:tag
    
  shub: Pull an image from Singularity Hub
      shub://user/image:tag

  oras: Pull a SIF image from an OCI registry that supports ORAS.
      oras://registry/namespace/image:tag

  http, https: Pull an image using the http(s?) protocol
      https://library.sylabs.io/v1/imagefile/library/default/alpine:latest

::

  apptainer pull [pull options...] [output file] <URI>

Examples
~~~~~~~~

::


    From a library
    $ apptainer pull alpine.sif library://alpine:latest

    From Docker
    $ apptainer pull tensorflow.sif docker://tensorflow/tensorflow:latest

    From Shub
    $ apptainer pull apptainer-images.sif shub://vsoch/apptainer-images

    From supporting OCI registry (e.g. Azure Container Registry)
    $ apptainer pull image.sif oras://<username>.azurecr.io/namespace/image:tag

Options
~~~~~~~

::

      --arch string      architecture to pull from library (default "amd64")
      --dir string       download images to the specific directory
      --disable-cache    do not use or create cached images/blobs
      --docker-login     login to a Docker Repository interactively
  -F, --force            overwrite an image file if it exists
  -h, --help             help for pull
      --library string   download images from the provided library
      --no-cleanup       do NOT clean up bundle after failed build, can be helpful for debugging
      --no-https         use http instead of https for docker:// oras:// and library://<hostname>/... URIs

SEE ALSO
~~~~~~~~

* :ref:`apptainer <apptainer>` 	 - 
Linux container platform optimized for High Performance Computing (HPC) and
Enterprise Performance Computing (EPC)

*Auto generated by spf13/cobra on 13-Dec-2022*
